# SSID_IVR_Study

./: .gitignore  .nojekyll  README.md  SSID_IVR_STUDY.bib  _quarto.yml  index.html  manuscript-preview.html  manuscript.docx  manuscript.embed.ipynb  manuscript.out.ipynb  manuscript.qmd  manuscript.tex  manuscript.xml  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
cityseg_configs/: andrew_config.yaml  cityseg_bash.txt
data/gaze_videos/SSID AV1/Exposure Summaries/: P48_DataQuality.txt
notebooks/: data-screening.ipynb  data-screening.out.ipynb  overlay-chop-multiple-participants.py  single-video-processing.ipynb  video-processing.ipynb
notebooks/ivr_utils/: __init__.py  ivr_utils.py
