[project]
name = "ssid-ivr-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cityseg",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "numpy>=2.0.2",
]

[tool.uv.sources]
cityseg = { git = "https://github.com/MitchellAcoustics/cityseg" }
